# wisfind

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wis2find/: constraints.py  definitions.py  main.py
src/wisfind/: __init__.py  action.py  definitions.py  main.py  parser.py
src/wiswatch/: definitions.py  main.py
