[project]
name = "wis2find"
dynamic = ["version"]
description = 'WMO Information System II (WIS2) "find-like" CLI client.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["WMO", "WIS2", "MQTT"]
authors = [
  { name = "Max Drexler", email = "mndrexler@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["aiomqtt", "pydantic"]

[project.scripts]
wis2find = "wiswatch.main:main"

[project.urls]
Documentation = "https://github.com/Max Drexler/wis2find#readme"
Issues = "https://github.com/Max Drexler/wis2find/issues"
Source = "https://github.com/Max Drexler/wis2find"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wiswatch/__init__.py"

