[project]
name = "wisfind"
dynamic = ["version"]
description = 'WMO Information System II (WIS2) client with filtering and validating built-in.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["WMO", "WIS2", "MQTT"]
authors = [
  { name = "Max Drexler", email = "mndrexler@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = ["aiomqtt", "pydantic", "typing-extensions"]

[project.scripts]
wisfind = "wisfind.main:main"

[project.urls]
Documentation = "https://github.com/Max Drexler/wisfind#readme"
Issues = "https://github.com/Max Drexler/wisfind/issues"
Source = "https://github.com/Max Drexler/wisfind"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wisfind/__init__.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


